update benchmark results to reflect current state, and add historical document